# 2d-heat-equation

./: .gitignore
_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py
solver/: compile_commands.json  hls_config.cfg  vitis-comp.json
solver/solver/: solver.hlscompile_summary  solver.hlsrun_csim_summary  vitis-comp.json
solver/solver/hls/: config.cmdline  hls_data.json
solver/solver/hls/.autopilot/db/: a.g  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_heat2d_serial_hls.cpp  apatb_heat2d_serial_hls_ir.bc  apatb_heat2d_serial_hls_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  be_messages.xml  clang.diag.xml  cmplx.3.000.fe.link.json  cmplx.3.001.fe.unroll-raw.json  cmplx.3.002.fe.unroll-simplified.json  cmplx.3.003.fe.inline-raw.json  cmplx.3.005.fe.array-partition-raw.json  cosimDB.tcl  (+92 more)
solver/solver/hls/syn/: inferred_directives.ini  inferred_directives.tcl
solver/solver/reports/: hls_compile.rpt  v++_compile_solver_guidance.html
solver/solver/reports/.db/: v++_compile_solver_guidance.pb3
source/heat2d/: CMakeLists.txt  main.cpp  requirements.txt  run_viz.sh  testbench.cpp  visualize.py
source/heat2d/include/: config.hpp  grid_utils.hpp  heat_parallel.hpp  heat_serial.hpp  heat_types.hpp  runner.hpp
source/heat2d/src/: grid_utils.cpp  heat_parallel.cpp  heat_serial.cpp  runner.cpp
source/heat2d_hls/: Makefile  heat2d_hls_tb  run_hls.tcl  visualize_hls.py
source/heat2d_hls/include/: heat2d_parallel_hls.hpp  heat2d_serial_hls.hpp  hls_config.hpp  hls_stencil.hpp  hls_types.hpp
source/heat2d_hls/src/: heat2d_parallel_hls.cpp  heat2d_serial_hls.cpp
source/heat2d_hls/tb/: tb_heat2d_hls.cpp  tb_utils.hpp
(+66 files in other folders)
